--- a/AndroidMaster/app/src/main/res/values/strings.xml
+++ b/AndroidMaster/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">AndroidMaster</string>
+    <string name="male">Hombre</string>
+    <string name="female">Mujer</string>
+    <string name="Height">Altura</string>
+    <string name="Weight">Peso</string>
+    <string name="Age">Edad</string>
+    <string name="Calculate">Calcular</string>
 </resources>
