--- a/AndroidMaster/app/src/main/res/values/strings.xml
+++ b/AndroidMaster/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
+    <!--IMC App-->
     <string name="app_name">AndroidMaster</string>
     <string name="male">Hombre</string>
     <string name="female">Mujer</string>
@@ -22,4 +23,9 @@
 
     <string name="title_obesidad">Obesidad</string>
     <string name="description_obesidad">Estás muy por encima de lo óptimo para tu peso y altura</string>
+
+    <!--ToDo App-->
+    <string name="todo_title">¡Bienvenido!</string>
+    <string name="todo_category">Categorías:</string>
+    <string name="todo_tasks">Tareas:</string>
 </resources>
