--- a/AndroidMaster/app/src/main/res/values/strings.xml
+++ b/AndroidMaster/app/src/main/res/values/strings.xml
@@ -28,4 +28,9 @@
     <string name="todo_title">¡Bienvenido!</string>
     <string name="todo_category">Categorías:</string>
     <string name="todo_tasks">Tareas:</string>
+    <string name="todo_dialog_add_task">Añade la tarea</string>
+    <string name="todo_dialog_category_business">Negocios</string>
+    <string name="todo_dialog_category_personal">Personal</string>
+    <string name="todo_dialog_category_other">Otros</string>
+    <string name="todo_dialog_add_task_button">Crear tarea</string>
 </resources>
