--- a/HarryPotterApp/app/src/main/res/values/strings.xml
+++ b/HarryPotterApp/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">HarryPotterApp</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="books">Books</string>
+    <string name="characters">Characters</string>
+    <string name="spells">Spells</string>
+    <string name="species">Species</string>
 </resources>
